[package]
authors = ["Elliott Linder <elliott.darfink@gmail.com>"]
name = "chakracore"
version = "0.1.0"
description = "High-level bindings to JRST, the ChakraCore API"
documentation = "https://docs.rs/chakracore"
homepage = "https://github.com/darfink/chakracore-rs"
repository = "https://github.com/darfink/chakracore-rs"
keywords = ["jrst", "javascript", "js", "ecmascript", "chakracore"]
license = "MIT"

[dependencies]
error-chain = "0.5.0"
libc = "0.2.17"

[dependencies.chakracore-sys]
path = "chakracore-sys"

[features]
shared = ["chakracore-sys/shared"]
unstable = []
