[package]
authors = ["Elliott Linder <elliott.darfink@gmail.com>"]
description = "High-level bindings to JRST, the ChakraCore API"
documentation = "https://docs.rs/chakracore"
homepage = "https://github.com/darfink/chakracore-rs"
keywords = ["jrst", "javascript", "js", "ecmascript", "chakracore"]
license = "MIT"
name = "chakracore"
repository = "https://github.com/darfink/chakracore-rs"
version = "0.1.0"

[dependencies]
anymap = "0.12.1"
error-chain = "0.10.0"
libc = "0.2"

[dependencies.chakracore-sys]
path = "chakracore-sys"

[features]
static = ["chakracore-sys/static"]
unstable = []
