[package]
authors = ["Elliott Linder <elliott.darfink@gmail.com>"]
description = "High-level bindings to JSRT, the ChakraCore API"
documentation = "https://docs.rs/chakracore"
homepage = "https://github.com/darfink/chakracore-rs"
keywords = ["jsrt", "javascript", "js", "ecmascript", "chakracore"]
license = "MIT"
name = "chakracore"
repository = "https://github.com/darfink/chakracore-rs"
version = "0.2.0"

[dependencies]
anymap = "0.12.1"
boolinator = "2.4.0"
chakracore-sys = "0.2"
error-chain = "0.10.0"
libc = "0.2"

[dev-dependencies]
matches = "0.1"

[features]
static = ["chakracore-sys/static"]
unstable = []
