[package]
authors = ["Elliott Linder <elliott.darfink@gmail.com>"]
name = "chakracore-sys"
version = "0.1.0"
build = "build.rs"
description = "Low-level bindings to JSRT, the ChakraCore API"
documentation = "https://docs.rs/chakracore-sys"
homepage = "https://github.com/darfink/chakracore-rs/tree/master/chakracore-sys"
repository = "https://github.com/darfink/chakracore-rs/tree/master/chakracore-sys"
include = ["build.rs", "src/**/*", "Cargo.toml"]
keywords = ["jsrt", "javascript", "js", "ecmascript", "chakracore"]
license = "MIT"

[lib]
doctest = false

[dependencies]
libc = "0.2.17"

[build-dependencies]
pkg-config = "0.3.8"
clang-sys = "0.8.0"
regex = "0.1"

[build-dependencies.libbindgen]
version = "0.1.1"
features = ["llvm_stable"]

[features]
static = []
