[package]
authors = ["Elliott Linder <elliott.darfink@gmail.com>"]
name = "chakracore-sys"
version = "0.2.2"
build = "build.rs"
description = "Low-level bindings to JSRT, the ChakraCore API"
documentation = "https://docs.rs/chakracore-sys"
homepage = "https://github.com/darfink/chakracore-rs/tree/master/chakracore-sys"
repository = "https://github.com/darfink/chakracore-rs/tree/master/chakracore-sys"
include = ["build.rs", "src/**/*", "Cargo.toml"]
keywords = ["jsrt", "javascript", "js", "ecmascript", "chakracore"]
license = "MIT"

[lib]
doctest = false

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.25"
clang-sys = "0.18.0"
pkg-config = "0.3.8"
regex = "0.2"

[features]
static = []
