[package]
authors = ["Elliott Linder <elliott.darfink@gmail.com>"]
name = "jsrt-sys"
version = "0.1.0"
build = "build.rs"
description = "Low-level bindings to JSRT, the ChakraCore API"
documentation = "https://docs.rs/jsrt-sys"
homepage = "https://github.com/darfink/jsrt-rs/tree/master/jsrt-sys"
repository = "https://github.com/darfink/jsrt-rs/tree/master/jsrt-sys"
include = ["build.rs", "src/**/*", "Cargo.toml"]
keywords = ["jsrt", "javascript", "js", "ecmascript", "chakracore"]
license = "MIT"

[lib]
doctest = false

[dependencies]
libc = "0.2.17"

[build-dependencies]
pkg-config = "0.3.8"
regex = "0.1"

[build-dependencies.libbindgen]
git = "https://github.com/servo/rust-bindgen"
features = ["llvm_stable"]

[features]
shared = []
